--- a/src/accueil.html
+++ b/src/accueil.html
@@ -8,14 +8,14 @@ keywords:
 
 <section class="menu section">
   <div class="container-fluid">
-    <div class="row">
-      <div class="col-md-6">
+    <div class="row align-items-end">
+      <div class="col-lg-6">
         <div class="menu_image">
           <img src="./assets/img/background.png" alt="" class="menu_image-bg">
           <img src="./assets/img/menu-1.jpeg" alt="" class="menu_image-img round">
         </div>
       </div>
-      <div class="col-md-6">
+      <div class="col-lg-6">
         <div class="menu_header">
           <h2 class="menu_header-title black-after">Nous sommes&nbsp;</h2>
           <h2 class="menu_header-title2">&nbsp;&nbsp;dmb construction</h2>
@@ -47,7 +47,7 @@ keywords:
     <h2 class="menu_header-title linear-after">Construisons&nbsp;</h2>
     <h2 class="menu_header-title2 text-white">&nbsp;&nbsp;ensemble l’avenir</h2>
   </div>
-  <div class="section bg-black">
+  <div class="section bg-black pb-5">
     <div class="container-fluid">
       <div class="row align-items-center">
         <div class="col-md-6">
@@ -69,17 +69,17 @@ keywords:
         </div>
       </div>
       <div class="row mt-5">
-        <div class="col-md-4">
+        <div class="col-md-4 my-2">
           <div class="menu_image">
             <img src="./assets/img/img1.png" alt="" class="menu_image-img3">
           </div>
         </div>
-        <div class="col-md-4">
+        <div class="col-md-4 my-2">
           <div class="menu_image">
             <img src="./assets/img/img2.png" alt="" class="menu_image-img3">
           </div>
         </div>
-        <div class="col-md-4">
+        <div class="col-md-4 my-2">
           <div class="menu_image">
             <img src="./assets/img/img3.png" alt="" class="menu_image-img3">
           </div>
@@ -89,7 +89,7 @@ keywords:
   </div>
 </section>
 
-<section class="value section">
+<section class="value section pt-5">
   <div class="menu_header pb-0">
     <h2 class="menu_header-title2 linear-before">&nbsp;&nbsp;NOS VALEURS</h2>
   </div>
@@ -164,10 +164,10 @@ keywords:
 </section>
 
 
-<section class="mene section-y">
+<section class="mene section-y pt-5">
   <div class="menu_header2 container justify-content-start">
     <h2 class="menu_header-title linear-after text-left">&nbsp;</h2>
-    <h2 class="menu_header-title2 text-white text-left">&nbsp;&nbsp; <span class="text text-left">NOS</span> <br>SERVICES</h2>
+    <h2 class="menu_header-title2 text-white text-left">&nbsp;<span class="text text-left">NOS<br></span>&nbsp;SERVICES</h2>
   </div>
   <div class="bg-black p-y-5">
     <div class="container">
@@ -206,8 +206,8 @@ keywords:
     <div class="row">
       <div class="col-md-12">
         <div class="menu_header2 container justify-content-start">
-          <h2 class="menu_header-title linear-after text-left">&nbsp;NOS</h2>
-          <h2 class="menu_header-title2 text-white text-left">&nbsp;&nbsp;SERVICES</h2>
+          <h2 class="menu_header-title linear-after2 text-left">&nbsp;Projets</h2>
+          <h2 class="menu_header-title2 text-white text-left">&nbsp;&nbsp;récents</h2>
         </div>
         <div class="menu_image">
           <img src="./assets/img/projects.jpeg" alt="" class="menu_image-img5">
@@ -215,7 +215,7 @@ keywords:
       </div>
     </div>
   </div>
-  <div class="section pt-5">
+  <div class="section pt-5 pb-0">
     <div class="projects_card">
       <div class="row align-items-center">
         <div class="col-md-5">
@@ -268,15 +268,16 @@ keywords:
 
 <section class="menu section bg-white">
   <div class="container">
-    <div class="row">
+    <div class="row mx-0 px-0">
       <div class="col-md-6">
         <div class="menu_image">
           <div class="menu_image-img6"></div>
         </div>
       </div>
       <div class="col-md-6">
-        <div class="menu_header">
-          <h2 class="menu_header-title">La sécurité <br>
+        <div class="menu_header3">
+          <h2 class="menu_header-title"><span class="black-after2">La sécurité</span></h2>
+          <h2 class="menu_header-title">
             notre priorité absolue</h2>
         </div>
         <div class="menu_content">
@@ -295,32 +296,32 @@ keywords:
       </div>
     </div>
   </div>
-  <hr class="bbhr">
+  <hr class="bbhr2 mb-5">
 </section>
 <section class="engagement bg-off">
   <div class="container">
       <div class="row justify-content-center">
         <div class="col-md-12 pt-5">
-          <div class="menu_header pb-3">
+          <div class="menu_header pb-3 mb-4">
             <h2 class="menu_header-title">NOS ENGAGEMENTS</h2>
           </div>
         </div>
           <div class="engagement_icons w-100 d-flex justify-content-center pb-5">
             <div class="row justify-content-center w-100">
-              <div class="col-md-3 d-flex flex-column justify-content-center align-items-center w-100">
+              <div class="col-md-3 col-sm-6 my-2 d-flex flex-column justify-content-center align-items-center w-100">
                 <img class="engagement_icons-img" src="./assets/img/e1.png" />
                 <p class="engagement_icons-p">Satisfactions clients</p>
               </div>
-              <div class="col-md-3 d-flex flex-column justify-content-center align-items-center w-100">
+              <div class="col-md-3 col-sm-6 my-2 d-flex flex-column justify-content-center align-items-center w-100">
                 <img class="engagement_icons-img" src="./assets/img/e2.png" />
                 <p class="engagement_icons-p">Communication claire
                   et transparence</p>
               </div>
-              <div class="col-md-3 d-flex flex-column justify-content-center align-items-center w-100">
+              <div class="col-md-3 col-sm-6 my-2 d-flex flex-column justify-content-center align-items-center w-100">
                 <img class="engagement_icons-img" src="./assets/img/e3.png" />
                 <p class="engagement_icons-p">L’excellence continue</p>
               </div>
-              <div class="col-md-3 d-flex flex-column justify-content-center align-items-center w-100">
+              <div class="col-md-3 col-sm-6 my-2 d-flex flex-column justify-content-center align-items-center w-100">
                 <img class="engagement_icons-img" src="./assets/img/e4.png" />
                 <p class="engagement_icons-p">Innovation</p>
               </div>
