--- a/src/article-agrandir-sa-maison.html
+++ b/src/article-agrandir-sa-maison.html
@@ -35,7 +35,7 @@ keywords:
           <h2 class="menu_header-title text-center my-2">Pourquoi agrandir sa maison ?</h2>
         </div>
         <div class="menu_content">
-          <div class="container">
+          <div class="container to-be-100">
             <p class="menu_content-p">
               L'idée d'agrandir sa maison séduit beaucoup de propriétaires en quête de davantage d'espace et de confort.
               Les avantages sont nombreux. En premier lieu, cela permet de répondre à des besoins spécifiques comme
@@ -59,9 +59,9 @@ keywords:
     <div class="row">
       <div class="col-md-12">
         <div class="menu_content">
-          <div class="container">
+          <div class="container to-be-100">
             <div class="menu_header justify-content-start py-3">
-              <h2 class="menu_header-title text-left my-2">Les motivations derrière un agrandissement</h2>
+              <h2 class="menu_header-title text-to-left my-2">Les motivations derrière un agrandissement</h2>
             </div>
             <p class="menu_content-p">
               Chaque projet d'<strong>extension maison</strong> diffère selon les objectifs personnels et familiaux.
@@ -86,9 +86,9 @@ keywords:
     <div class="row">
       <div class="col-md-12">
         <div class="menu_content">
-          <div class="container">
+          <div class="container to-be-100">
             <div class="menu_header justify-content-start py-3">
-              <h3 class="menu_header-title2 text-left my-2">La valorisation du patrimoine</h3>
+              <h3 class="menu_header-title2 text-to-left my-2">La valorisation du patrimoine</h3>
             </div>
             <p class="menu_content-p">
               Investir dans l'<strong>agrandissement maison</strong>, c'est aussi investir dans la valorisation de son
@@ -108,9 +108,9 @@ keywords:
     <div class="row">
       <div class="col-md-12">
         <div class="menu_content">
-          <div class="container">
+          <div class="container to-be-100">
             <div class="menu_header justify-content-start py-3">
-              <h2 class="menu_header-title2 text-left my-2">Planification et conception de l'extension</h2>
+              <h2 class="menu_header-title2 text-to-left my-2">Planification et conception de l'extension</h2>
             </div>
             <p class="menu_content-p">
               Une préparation minutieuse est essentielle pour toute entreprise. Commencez par évaluer la faisabilité de
@@ -136,9 +136,9 @@ keywords:
     <div class="row">
       <div class="col-md-12">
         <div class="menu_content">
-          <div class="container">
+          <div class="container to-be-100">
             <div class="menu_header justify-content-start py-3">
-              <h3 class="menu_header-title2 text-left my-2">Choisir les bons professionnels</h3>
+              <h3 class="menu_header-title2 text-to-left my-2">Choisir les bons professionnels</h3>
             </div>
             <p class="menu_content-p">
               Travailler avec des experts est indispensable pour garantir la réussite de votre <strong>extension
@@ -163,9 +163,9 @@ keywords:
     <div class="row">
       <div class="col-md-12">
         <div class="menu_content">
-          <div class="container">
+          <div class="container to-be-100">
             <div class="menu_header justify-content-start py-3">
-              <h3 class="menu_header-title2 text-left my-2">Les permis et autorisations nécessaires</h3>
+              <h3 class="menu_header-title2 text-to-left my-2">Les permis et autorisations nécessaires</h3>
             </div>
             <p class="menu_content-p">
               Avant de commencer les travaux, vous devrez probablement obtenir certaines autorisations administratives.
@@ -195,9 +195,9 @@ keywords:
     <div class="row">
       <div class="col-md-12">
         <div class="menu_content">
-          <div class="container">
+          <div class="container to-be-100">
             <div class="menu_header justify-content-start py-3">
-              <h2 class="menu_header-title2 text-left my-2">Construction et réalisation des travaux</h2>
+              <h2 class="menu_header-title2 text-to-left my-2">Construction et réalisation des travaux</h2>
             </div>
             <p class="menu_content-p">
               Une fois les plans validés et les autorisations obtenues, place à la construction. La coordination entre
@@ -225,9 +225,9 @@ keywords:
     <div class="row">
       <div class="col-md-12">
         <div class="menu_content">
-          <div class="container">
+          <div class="container to-be-100">
             <div class="menu_header justify-content-start py-3">
-              <h3 class="menu_header-title2 text-left my-2">Matériaux et technologies modernes</h3>
+              <h3 class="menu_header-title2 text-to-left my-2">Matériaux et technologies modernes</h3>
             </div>
             <p class="menu_content-p">
               Le choix des matériaux est une étape clé pour un <strong>confort thermique entretien</strong> performant
@@ -253,9 +253,9 @@ keywords:
     <div class="row">
       <div class="col-md-12">
         <div class="menu_content">
-          <div class="container">
+          <div class="container to-be-100">
             <div class="menu_header justify-content-start py-3">
-              <h3 class="menu_header-title2 text-left my-2">Le respect des délais et du budget</h3>
+              <h3 class="menu_header-title2 text-to-left my-2">Le respect des délais et du budget</h3>
             </div>
             <p class="menu_content-p">
               Pour maîtriser votre projet d’<strong>agrandissement maison</strong>, il est fondamental de fixer dès le
@@ -283,9 +283,9 @@ keywords:
     <div class="row">
       <div class="col-md-12">
         <div class="menu_content">
-          <div class="container">
+          <div class="container to-be-100">
             <div class="menu_header justify-content-start py-3">
-              <h2 class="menu_header-title2 text-left my-3">Finitions et aménagement intérieur</h2>
+              <h2 class="menu_header-title2 text-to-left my-3">Finitions et aménagement intérieur</h2>
             </div>
             <p class="menu_content-p">
               Une fois la structure terminée, place aux finitions. Prenez soin de sélectionner des revêtements de sol et
@@ -307,9 +307,9 @@ keywords:
     <div class="row">
       <div class="col-md-12">
         <div class="menu_content">
-          <div class="container">
+          <div class="container to-be-100">
             <div class="menu_header justify-content-start py-3">
-              <h3 class="menu_header-title2 text-left my-3">Intégrer des éléments écologiques</h3>
+              <h3 class="menu_header-title2 text-to-left my-3">Intégrer des éléments écologiques</h3>
             </div>
             <p class="menu_content-p">
               L’ajout d’équipements écologiques est de plus en plus prisé lors de projets d’agrandissement. Panneaux
@@ -333,9 +333,9 @@ keywords:
     <div class="row">
       <div class="col-md-12">
         <div class="menu_content">
-          <div class="container">
+          <div class="container to-be-100">
             <div class="menu_header justify-content-start pb-5">
-              <h3 class="menu_header-title2 text-left my-2">Faire appel à une entreprise spécialisée</h3>
+              <h3 class="menu_header-title2 text-to-left my-2">Faire appel à une entreprise spécialisée</h3>
             </div>
             <p class="menu_content-p">
               Si gérer tous ces aspects vous semble trop complexe, n’hésitez pas à solliciter une entreprise spécialisée
@@ -359,9 +359,9 @@ keywords:
     <div class="row">
       <div class="col-md-12">
         <div class="menu_content">
-          <div class="container">
+          <div class="container to-be-100">
             <div class="menu_header justify-content-start py-3">
-              <h2 class="menu_header-title2 text-left my-3">Conseils pour choisir les bonnes solutions technologiques</h2>
+              <h2 class="menu_header-title2 text-to-left my-3">Conseils pour choisir les bonnes solutions technologiques</h2>
             </div>
             <p class="menu_content-p">
               Face à la multitude de solutions disponibles, il peut être difficile de faire les bons choix pour son
@@ -386,9 +386,9 @@ keywords:
     <div class="row">
       <div class="col-md-12">
         <div class="menu_content">
-          <div class="container">
+          <div class="container to-be-100">
             <div class="menu_header justify-content-start py-3">
-              <h3 class="menu_header-title2 text-left my-2">Comparaison des options</h3>
+              <h3 class="menu_header-title2 text-to-left my-2">Comparaison des options</h3>
             </div>
             <p class="menu_content-p">
               Pour vous accompagner, voici une liste des principaux matériaux utilisés pour les extensions :
@@ -417,9 +417,9 @@ keywords:
     <div class="row">
       <div class="col-md-12">
         <div class="menu_content">
-          <div class="container">
+          <div class="container to-be-100">
             <div class="menu_header justify-content-start py-3">
-              <h3 class="menu_header-title2 text-left my-2">Préserver l’harmonie de votre habitat</h3>
+              <h3 class="menu_header-title2 text-to-left my-2">Préserver l’harmonie de votre habitat</h3>
             </div>
             <p class="menu_content-p">
               N’oubliez jamais que l’objectif est d’harmoniser l’ancienne et la nouvelle partie de votre maison.
