--- a/src/blog.html
+++ b/src/blog.html
@@ -31,7 +31,7 @@ keywords:
             conseils pratiques pour un projet réussi.</h2>
         </div>
         <div class="menu_content">
-          <div class="container">
+          <div class="container to-be-100">
             <p class="menu_content-p">
               <strong>L'agrandissement maison</strong> est souvent une solution privilégiée pour ceux qui
               souhaitent obtenir plus d'espace sans déménager. Que ce soit pour accueillir un nouvel enfant, aménager un
@@ -80,7 +80,7 @@ keywords:
     <div class="row">
       <div class="col-md-12">
         <div class="menu_content">
-          <div class="container">
+          <div class="container to-be-100">
             <div class="menu_header justify-content-start pb-5">
               <h2 class="menu_header-title2 text-left">Les motivations derrière un agrandissement</h2>
             </div>
@@ -110,7 +110,7 @@ keywords:
     <div class="row">
       <div class="col-md-12">
         <div class="menu_content">
-          <div class="container">
+          <div class="container to-be-100">
             <div class="menu_header justify-content-start pb-5">
               <h2 class="menu_header-title2 text-left">La valorisation du patrimoine</h2>
             </div>
