--- a/src/entreprise-d-extension-de-maison.html
+++ b/src/entreprise-d-extension-de-maison.html
@@ -34,7 +34,7 @@ keywords:
     <div class="row">
       <div class="col-md-12">
         <div class="menu_header pb-2">
-          <h2 class="menu_header-title text-left my-2">Pourquoi opter pour une extension de maison&nbsp;&nbsp;?</h2>
+          <h2 class="menu_header-title text-to-left my-2">Pourquoi opter pour une extension de maison&nbsp;&nbsp;?</h2>
         </div>
         <div class="menu_content">
           <div class="container">
@@ -50,7 +50,7 @@ keywords:
               extension bien pensée.</p>
 
               <div class="menu_header justify-content-start py-3">
-                <h3 class="menu_header-title2 text-left my-2">Augmenter la valeur immobilière</h3>
+                <h3 class="menu_header-title2 text-to-left my-2">Augmenter la valeur immobilière</h3>
               </div>
   
               <p class="menu_content-p">Avoir quelques mètres carrés supplémentaires peut considérablement augmenter la valeur marchande de votre
@@ -75,9 +75,9 @@ keywords:
     <div class="row">
       <div class="col-md-12">
         <div class="menu_content">
-          <div class="container">
+          <div class="container to-be-100">
             <div class="menu_header justify-content-start py-3">
-              <h2 class="menu_header-title text-left my-2">Choisir la bonne entreprise pour votre extension</h2>
+              <h2 class="menu_header-title text-to-left my-2">Choisir la bonne entreprise pour votre extension</h2>
             </div>
             <p class="menu_content-p">Se lancer dans l'<strong>extension de maison</strong> exige un certain nombre de compétences techniques
               et administratives. Il est donc impératif de choisir une <strong>entreprise générale du btp</strong> ou un
@@ -109,9 +109,9 @@ keywords:
     <div class="row">
       <div class="col-md-12">
         <div class="menu_content">
-          <div class="container">
+          <div class="container to-be-100">
             <div class="menu_header justify-content-start py-3">
-              <h3 class="menu_header-title2 text-left my-2">L’importance du choix des matériaux</h3>
+              <h3 class="menu_header-title2 text-to-left my-2">L’importance du choix des matériaux</h3>
             </div>
             <p class="menu_content-p">Le bon choix des matériaux est crucial pour la réussite de votre <strong>agrandissement</strong>. Une
               ossature bois, par exemple, sera idéale pour ceux cherchant une solution rapide et esthétique, tandis que
@@ -131,9 +131,9 @@ keywords:
     <div class="row">
       <div class="col-md-12">
         <div class="menu_content">
-          <div class="container">
+          <div class="container to-be-100">
             <div class="menu_header justify-content-start py-3">
-              <h2 class="menu_header-title text-left my-2">Le rôle clés des professionnels</h2>
+              <h2 class="menu_header-title text-to-left my-2">Le rôle clés des professionnels</h2>
             </div>
             <p class="menu_content-p">Engager un <strong>architecte</strong> ou une <strong>entreprise générale du btp</strong> est souvent une
               étape incontournable pour réussir votre extension. Ces experts possèdent non seulement les compétences
@@ -144,7 +144,7 @@ keywords:
               l'utilisation de l'espace et à intégrer la nouvelle extension de manière fluide au bâti existant.</p>
 
 
-            <h3 class="menu_header-title2 text-left my-2">La nécessaire expertise des artisans spécialisés</h3>
+            <h3 class="menu_header-title2 text-to-left my-2">La nécessaire expertise des artisans spécialisés</h3>
 
             <p class="menu_content-p">Choisir le bon <strong>artisan spécialisé</strong> est primordial. Qu'il s'agisse de charpentiers, de
               maçons ou de plombiers, chaque professionnel joue un rôle spécifique et essentiel. Assurez-vous de
@@ -169,11 +169,11 @@ keywords:
     <div class="row">
       <div class="col-md-12">
         <div class="menu_content">
-          <div class="container">
+          <div class="container to-be-100">
             <div class="menu_header justify-content-start py-3">
 
 
-              <h2 class="menu_header-title text-left my-2">Les démarches administratives à ne pas négliger</h2>
+              <h2 class="menu_header-title text-to-left my-2">Les démarches administratives à ne pas négliger</h2>
             </div>
 
             <p class="menu_content-p">L'ajout d'une extension implique souvent de se conformer à diverses <strong>réglementation</strong>s
@@ -184,7 +184,7 @@ keywords:
               fait partie. Des conflits peuvent vite surgir si les démarches administratives ne sont pas bien gérées.
             </p>
 
-            <h3 class="menu_header-title2 text-left my-2">Plan local d'urbanisme (PLU)</h3>
+            <h3 class="menu_header-title2 text-to-left my-2">Plan local d'urbanisme (PLU)</h3>
 
             <p class="menu_content-p">Votre commune dispose sûrement d’un Plan local d’urbanisme (PLU) dictant les règles de construction et
               d’aménagement. Ce document vous indiquera notamment les distances à respecter vis-à-vis des voisins, les
@@ -193,7 +193,7 @@ keywords:
             <p class="menu_content-p">Avant de commencer toute démarche, assurez-vous de le consulter pour éviter les mauvaises surprises et
               d’éventuelles amendes.</p>
 
-            <h3 class="menu_header-title2 text-left my-2">Permis de construire et déclaration préalable</h3>
+            <h3 class="menu_header-title2 text-to-left my-2">Permis de construire et déclaration préalable</h3>
 
             <p class="menu_content-p">Selon l'envergure de votre projet, différents documents pourront être exigés. Un permis de construire est
               souvent nécessaire pour les extensions importantes. Pour les projets de moindre importance, une simple
@@ -215,9 +215,9 @@ keywords:
     <div class="row">
       <div class="col-md-12">
         <div class="menu_content">
-          <div class="container">
+          <div class="container to-be-100">
             <div class="menu_header justify-content-start py-3">
-              <h2 class="menu_header-title text-left my-2">Étapes clés pour réussir son extension de maison</h2>
+              <h2 class="menu_header-title text-to-left my-2">Étapes clés pour réussir son extension de maison</h2>
             </div>
             <p class="menu_content-p">Dans tout projet d'extension de maison, il est fondamental d’avoir une idée claire des différentes étapes
               à suivre. Voici un aperçu pour mieux comprendre le déroulement typique :</p>
@@ -234,7 +234,7 @@ keywords:
                 intérieurs.</li>
             </ul>
 
-            <h3 class="menu_header-title2 text-left my-2">Conseils pratiques pour une extension réussie</h3>
+            <h3 class="menu_header-title2 text-to-left my-2">Conseils pratiques pour une extension réussie</h3>
 
             <p class="menu_content-p">Outre le suivi méthodique des étapes mentionnées, certaines astuces peuvent vous aider à réussir votre
               extension de maison :</p>
@@ -264,9 +264,9 @@ keywords:
     <div class="row">
       <div class="col-md-12">
         <div class="menu_content">
-          <div class="container">
+          <div class="container to-be-100">
             <div class="menu_header justify-content-start py-3">
-              <h2 class="menu_header-title text-left my-2">Quel coût pour une extension de maison&nbsp;&nbsp;?</h2>
+              <h2 class="menu_header-title text-to-left my-2">Quel coût pour une extension de maison&nbsp;&nbsp;?</h2>
             </div>
             <p class="menu_content-p">Évaluer le coût d’une <strong>extension de maison</strong> dépend de multiples facteurs : taille de
               l’agrandissement, choix des matériaux, complexité du projet et localisation géographique. Toutefois, il
@@ -276,7 +276,7 @@ keywords:
               <strong>maçonnerie</strong>, mais chaque technique présente ses avantages uniques, justifiant souvent
               l'écart tarifaire.</p>
 
-            <h3 class="menu_header-title2 text-left my-2">Estimer son budget global</h3>
+            <h3 class="menu_header-title2 text-to-left my-2">Estimer son budget global</h3>
 
             <p class="menu_content-p">Pour obtenir une estimation précise, il convient de consulter divers professionnels et comparer plusieurs
               devis. Les éléments suivants doivent être pris en considération lors de cette évaluation :</p>
