--- a/src/entreprise-de-construction.html
+++ b/src/entreprise-de-construction.html
@@ -33,11 +33,11 @@ keywords:
     <div class="row">
       <div class="col-md-12">
         <div class="menu_header pb-2">
-          <h2 class="menu_header-title text-left my-2">Les critères essentiels pour choisir une entreprise de construction</h2>
+          <h2 class="menu_header-title text-to-left my-2">Les critères essentiels pour choisir une entreprise de construction</h2>
         </div>
         <div class="menu_content">
           <div class="container">
-            <h3 class="menu_header-title2 text-left my-3">Expérience et expertise</h3>
+            <h3 class="menu_header-title2 text-to-left my-3">Expérience et expertise</h3>
             <p class="menu_content-p">L'un des premiers éléments à considérer est l'<strong>expérience</strong> de l'entreprise dans le domaine
               de la construction. Une entreprise avec plusieurs années d'existence aura probablement développé des
               compétences solides et une connaissance approfondie du secteur. Il est également important de vérifier
@@ -59,9 +59,9 @@ keywords:
     <div class="row">
       <div class="col-md-12">
         <div class="menu_content">
-          <div class="container">
+          <div class="container to-be-100">
             <div class="menu_header justify-content-start py-3">
-              <h3 class="menu_header-title2 text-left my-3">Réputation et références</h3>
+              <h3 class="menu_header-title2 text-to-left my-3">Réputation et références</h3>
             </div>
             <p class="menu_content-p">La réputation d'une entreprise de construction peut en dire long sur sa fiabilité et la qualité de son
               travail. Consulter les avis en ligne et demander des recommandations à des amis ou à des collègues qui ont
@@ -85,14 +85,14 @@ keywords:
     <div class="row">
       <div class="col-md-12">
         <div class="menu_content">
-          <div class="container">
+          <div class="container to-be-100">
             <div class="menu_header justify-content-start py-3">
-              <h2 class="menu_header-title text-left my-2">Les différents types de services proposés par les entreprises de construction</h2>
+              <h2 class="menu_header-title text-to-left my-2">Les différents types de services proposés par les entreprises de construction</h2>
             </div>
 
             <div class="row">
               <div class="col-md-6">
-                <h3 class="menu_header-title2 text-left my-3">Construction neuve</h3>
+                <h3 class="menu_header-title2 text-to-left my-3">Construction neuve</h3>
                 <p class="menu_content-p">La construction de nouveaux bâtiments est l'un des services principaux des <strong>entreprises de
                     construction</strong>. Que ce soit pour des maisons individuelles, des immeubles ou des locaux
                   commerciaux, ces entreprises offrent des solutions qui vont de la conception architecturale à la
@@ -105,7 +105,7 @@ keywords:
               </div>
               <div class="col-md-6">
 
-                <h3 class="menu_header-title2 text-left my-3">Rénovation et réhabilitation</h3>
+                <h3 class="menu_header-title2 text-to-left my-3">Rénovation et réhabilitation</h3>
                 <p class="menu_content-p">Outre les nouvelles constructions, nombreuses sont les <strong>entreprises françaises</strong>
                   spécialisées dans la <strong>rénovation</strong> et la <strong>réhabilitation</strong> de bâtiments
                   existants. Ces services peuvent inclure la modernisation de structures anciennes, la mise aux normes
@@ -136,11 +136,11 @@ keywords:
     <div class="row">
       <div class="col-md-12">
         <div class="menu_content">
-          <div class="container">
+          <div class="container to-be-100">
             <div class="menu_header justify-content-start py-3">
-              <h2 class="menu_header-title text-left my-2">Les avantages de faire appel à des professionnels du gros œuvre et du génie civil</h2>
+              <h2 class="menu_header-title text-to-left my-2">Les avantages de faire appel à des professionnels du gros œuvre et du génie civil</h2>
             </div>
-            <h3 class="menu_header-title2 text-left my-3">Qualité et sécurité</h3>
+            <h3 class="menu_header-title2 text-to-left my-3">Qualité et sécurité</h3>
             <p class="menu_content-p">Faire appel à des spécialistes du <strong>gros œuvre</strong> et du <strong>génie civil</strong> garantit
               une certaine qualité et sécurité pour votre projet. Ces professionnels possèdent les connaissances
               nécessaires pour manipuler des matériaux lourds et complexes, établir des fondations solides, et ériger
@@ -165,9 +165,9 @@ keywords:
     <div class="row">
       <div class="col-md-12">
         <div class="menu_content">
-          <div class="container">
+          <div class="container to-be-100">
             <div class="menu_header justify-content-start py-3">
-              <h3 class="menu_header-title2 text-left my-3">Efficacité et gain de temps</h3>
+              <h3 class="menu_header-title2 text-to-left my-3">Efficacité et gain de temps</h3>
             </div>
             <p class="menu_content-p">L'une des raisons majeures de confier votre projet à des experts du <strong>bâtiment</strong> est
               l'efficacité qu'ils apportent. Leur expérience permet de planifier et exécuter les tâches rapidement, tout
@@ -191,11 +191,11 @@ keywords:
     <div class="row">
       <div class="col-md-12">
         <div class="menu_content">
-          <div class="container">
+          <div class="container to-be-100">
             <div class="menu_header justify-content-start py-3">
-              <h2 class="menu_header-title text-left my-2">La spécificité de la construction métallique</h2>
+              <h2 class="menu_header-title text-to-left my-2">La spécificité de la construction métallique</h2>
             </div>
-            <h3 class="menu_header-title2 text-left my-3">Polyvalence et durabilité</h3>
+            <h3 class="menu_header-title2 text-to-left my-3">Polyvalence et durabilité</h3>
             <p class="menu_content-p">La <strong>construction métallique</strong> est particulièrement prisée pour sa polyvalence et sa
               durabilité. Utilisée dans diverses structures telles que les halls industriels, les ponts et même
               certaines habitations, elle offre une résistance exceptionnelle aux intempéries et aux contraintes
@@ -216,9 +216,9 @@ keywords:
     <div class="row">
       <div class="col-md-12">
         <div class="menu_content">
-          <div class="container">
+          <div class="container to-be-100">
             <div class="menu_header justify-content-start py-3">
-              <h3 class="menu_header-title2 text-left my-3">Écologie et innovations</h3>
+              <h3 class="menu_header-title2 text-to-left my-3">Écologie et innovations</h3>
             </div>
             <p class="menu_content-p">De plus en plus, la <strong>construction métallique</strong> intègre des considérations écologiques. Les
               métaux utilisés sont souvent fabriqués à partir de matériaux recyclés, contribuant à réduire l'empreinte
@@ -242,14 +242,14 @@ keywords:
     <div class="row">
       <div class="col-md-12">
         <div class="menu_content">
-          <div class="container">
+          <div class="container to-be-100">
             <div class="menu_header justify-content-start py-3">
-              <h2 class="menu_header-title text-left my-2">Choisir entre les grandes entreprises et les PME locales</h2>
+              <h2 class="menu_header-title text-to-left my-2">Choisir entre les grandes entreprises et les PME locales</h2>
             </div>
 
             <div class="row">
               <div class="col-md-6">
-                <h3 class="menu_header-title2 text-left my-3">Grandes entreprises</h3>
+                <h3 class="menu_header-title2 text-to-left my-3">Grandes entreprises</h3>
                 <p class="menu_content-p">Faire appel à une grande entreprise de construction comme <strong>eiffage construction</strong>
                   assure généralement une large gamme de services et une solidité financière. Ces entreprises ont
                   souvent accès à des ressources importantes et peuvent prendre en charge des projets de grande
@@ -261,7 +261,7 @@ keywords:
               </div>
               <div class="col-md-6">
 
-                <h3 class="menu_header-title2 text-left my-3">PME locales</h3>
+                <h3 class="menu_header-title2 text-to-left my-3">PME locales</h3>
                 <p class="menu_content-p">En revanche, les petites et moyennes entreprises (PME) locales offrent souvent un service plus
                   personnalisé et une meilleure compréhension des spécificités régionales. Elles sont également plus
                   accessibles et peuvent offrir une flexibilité qui manque parfois aux grands groupes.</p>
@@ -284,12 +284,12 @@ keywords:
     <div class="row">
       <div class="col-md-12">
         <div class="menu_content">
-          <div class="container">
+          <div class="container to-be-100">
             <div class="menu_header justify-content-start py-3">
 
-              <h2 class="menu_header-title text-left my-2">Comment préparer votre projet de construction</h2>
+              <h2 class="menu_header-title text-to-left my-2">Comment préparer votre projet de construction</h2>
             </div>
-            <h3 class="menu_header-title2 text-left my-3">Définir clairement vos besoins</h3>
+            <h3 class="menu_header-title2 text-to-left my-3">Définir clairement vos besoins</h3>
             <p class="menu_content-p">Avant même de consulter une <strong>entreprise de construction</strong>, il est essentiel de définir
               précisément vos besoins et attentes. Qu'attendez-vous réellement de ce projet ? Quels sont vos objectifs
               en termes de budget, de délai et de qualité ? Avoir une vision claire dès le départ facilitera la
@@ -300,7 +300,7 @@ keywords:
               malentendus coûteux.</p>
             <br>
 
-            <h3 class="menu_header-title2 text-left my-3">Demander plusieurs devis</h3>
+            <h3 class="menu_header-title2 text-to-left my-3">Demander plusieurs devis</h3>
             <p class="menu_content-p">Ne vous contentez jamais du premier devis reçu. Comparez les propositions de plusieurs
               <strong>entreprises de construction</strong> pour obtenir le meilleur rapport qualité-prix possible.
               Examinez chaque devis en détail et vérifiez ce qui est inclus ou exclu. Les prix les plus bas ne sont pas
@@ -323,11 +323,11 @@ keywords:
     <div class="row">
       <div class="col-md-12">
         <div class="menu_content">
-          <div class="container">
+          <div class="container to-be-100">
             <div class="menu_header justify-content-start py-3">
-              <h2 class="menu_header-title text-left my-2">L'importance des contrats clairs et détaillés</h2>
+              <h2 class="menu_header-title text-to-left my-2">L'importance des contrats clairs et détaillés</h2>
             </div>
-            <h3 class="menu_header-title2 text-left my-3">Rédaction du contrat</h3>
+            <h3 class="menu_header-title2 text-to-left my-3">Rédaction du contrat</h3>
             <p class="menu_content-p">Une fois l'entreprise choisie, un contrat clair et détaillé est indispensable. Celui-ci doit reprendre
               tous les éléments discutés, les dates de début et de fin prévues, le budget, ainsi que les démarches
               administratives à suivre (permis de construire, etc.). Un bon contrat protégera vos intérêts et ceux de
@@ -339,7 +339,7 @@ keywords:
 
 
 
-            <h3 class="menu_header-title2 text-left my-3">Gestion des modifications</h3>
+            <h3 class="menu_header-title2 text-to-left my-3">Gestion des modifications</h3>
             <p class="menu_content-p">Prévoyez également des clauses spécifiques concernant les modifications potentielles du projet. Les
               imprévus sont quasi inévitables dans les <strong>travaux publics</strong>
 
