--- a/src/nos-prestations.html
+++ b/src/nos-prestations.html
@@ -26,16 +26,18 @@ keywords:
 <section class="menu section">
   <div class="container-fluid">
     <div class="row">
-      <div class="col-md-12">
+      <div class="col-lg-12">
         <div class="menu_header">
-          <h2 class="menu_header-title linear-after2">La maçonnerie chez DMB&nbsp;</h2>
-          <h2 class="menu_header-title2 text-bg"><span class="white-bg">&nbsp;&nbsp;tradition et innovation
+          <h2 class="menu_header-title linear-after6">La maçonnerie chez DMB&nbsp;</h2>
+          <h2 class="menu_header-title2 mt-3"><span class="white-bg px-0 mx-0">&nbsp;&nbsp;tradition et innovation
               pour</span><br>
-            des bâtiments durables<br>
-            et esthétiquement remarquables.</h2>
+              <div class="text-bg2 pb-0">
+                des bâtiments durables<br>
+                et esthétiquement remarquables.
+              </div></h2>
         </div>
         <div class="menu_content">
-          <div class="container">
+          <div class="container to-be-100">
             <p class="menu_content-p">
               Chez DMB Construction, la maçonnerie est bien plus qu’un simple processus de construction – c’est un art.
               Nos artisans qualifiés combinent des techniques traditionnelles avec des approches modernes pour créer des
@@ -57,15 +59,15 @@ keywords:
 
 
 
-<section class="menu section">
+<section class="menu section pt-0">
   <div class="container-fluid">
     <div class="menu_header justify-content-center pb-0 to-be-left">
-      <h2 class="menu_header-title linear-after3 pb-0">Construction neuve &nbsp;<br></h2>
+      <h2 class="menu_header-title linear-after6 pb-0 mb-0">Construction neuve &nbsp;<br><br></h2>
     </div>
-    <div class="row">
-      <div class="col-md-6">
+    <div class="row align-items-start">
+      <div class="col-lg-5">
         <div class="menu_content">
-          <div class="container">
+          <div class="container to-be-100">
             <p class="menu_content-p text-justify">
               DMB Construction s’engage à accompagner ses clients dans chaque étape de leur projet de construction
               neuve. Depuis les premières étapes de la conception, nos équipes travaillent en étroite collaboration avec
@@ -87,7 +89,7 @@ keywords:
           </div>
         </div>
       </div>
-      <div class="col-md-6">
+      <div class="col-lg-7">
         <div class="menu_image">
           <div class="menu_image-black2">
           </div>
@@ -102,19 +104,19 @@ keywords:
 <section class="menu section">
   <div class="container-fluid">
     <div class="menu_header justify-content-center pb-0 to-be-right">
-      <h2 class="menu_header-title linear-after4 pb-0"> &nbsp; Rénovation et réhabilitation<br></h2>
+      <h2 class="menu_header-title linear-after41 pb-0"> &nbsp; Rénovation et réhabilitation<br></h2>
     </div>
     <div class="row">
-      <div class="col-md-6">
+      <div class="col-lg-7">
         <div class="menu_image">
           <div class="menu_image-black3">
           </div>
           <img src="./assets/img/pexels.jpeg" alt="" class="menu_image-img4">
         </div>
       </div>
-      <div class="col-md-6">
+      <div class="col-lg-5">
         <div class="menu_content">
-          <div class="container">
+          <div class="container to-be-100">
             <p class="menu_content-p text-justify">
               La rénovation et la réhabilitation sont des services essentiels pour les bâtiments qui nécessitent une
               mise à jour ou une modernisation. Chez DMB Construction, nous transformons les structures existantes pour
@@ -141,15 +143,15 @@ keywords:
 </section>
 
 
-<section class="menu section">
+<section class="menu section pt-0">
   <div class="container-fluid">
-    <div class="menu_header justify-content-center pb-0 to-be-left">
-      <h2 class="menu_header-title linear-after3 pb-0">Extension et surélévation &nbsp;<br></h2>
+    <div class="menu_header justify-content-center pb-0 to-be-left2">
+      <h2 class="menu_header-title linear-after3 pb-5">Extension et surélévation &nbsp;<br></h2>
     </div>
     <div class="row">
-      <div class="col-md-6">
+      <div class="col-lg-5">
         <div class="menu_content">
-          <div class="container">
+          <div class="container to-be-100">
             <p class="menu_content-p text-justify">
               L’extension et la surélévation de bâtiments sont des solutions efficaces pour augmenter l’espace sans
               nécessiter de nouveaux terrains. DMB Construction se spécialise dans la création d’extensions et de
@@ -171,7 +173,7 @@ keywords:
           </div>
         </div>
       </div>
-      <div class="col-md-6">
+      <div class="col-lg-7">
         <div class="menu_image">
           <div class="menu_image-black2">
           </div>
@@ -183,22 +185,22 @@ keywords:
 </section>
 
 
-<section class="menu section">
+<section class="menu section pt-0">
   <div class="container-fluid">
     <div class="menu_header justify-content-center pb-0 to-be-right">
-      <h2 class="menu_header-title linear-after4 pb-0"> &nbsp; Génie civil et infrastructure<br></h2>
+      <h2 class="menu_header-title linear-after41 pb-0"> &nbsp; Génie civil et infrastructure<br></h2>
     </div>
     <div class="row">
-      <div class="col-md-6">
+      <div class="col-lg-7">
         <div class="menu_image">
           <div class="menu_image-black3">
           </div>
           <img src="./assets/img/happy-african.jpeg" alt="" class="menu_image-img4">
         </div>
       </div>
-      <div class="col-md-6">
+      <div class="col-lg-5">
         <div class="menu_content">
-          <div class="container">
+          <div class="container to-be-100">
             <p class="menu_content-p text-justify">
               DMB Construction propose des services de génie civil et d’infrastructure pour des projets publics et
               privés d’envergure. Nous réalisons des ouvrages solides et durables, tels que des ponts, routes, réseaux
@@ -227,16 +229,16 @@ keywords:
 </section>
 
 
-<section class="menu section">
+<section class="menu section pt-0">
   <div class="container-fluid">
-    <div class="menu_header justify-content-center pb-0 to-be-left">
+    <div class="menu_header justify-content-center pb-0 to-be-left2">
       <h2 class="menu_header-title linear-after3 pb-0">Installation d’équipements<br>
         spécifiques</h2>
     </div>
     <div class="row">
-      <div class="col-md-6">
+      <div class="col-lg-5">
         <div class="menu_content">
-          <div class="container">
+          <div class="container to-be-100">
             <p class="menu_content-p text-justify">
               DMB Construction offre un service spécialisé pour l’installation d’équipements techniques, tels que des
               systèmes de chauffage, climatisation, ventilation et énergies renouvelables. Nos équipes qualifiées
@@ -257,7 +259,7 @@ keywords:
           </div>
         </div>
       </div>
-      <div class="col-md-6">
+      <div class="col-lg-7">
         <div class="menu_image">
           <div class="menu_image-black2">
           </div>
