--- a/src/nos-realisations.html
+++ b/src/nos-realisations.html
@@ -1,6 +1,6 @@
 ---
 layout: default
-permalink: /notre-entreprise
+permalink: /nos-realisations
 title:
 description:
 keywords:
@@ -31,11 +31,11 @@ keywords:
     <div class="row">
       <div class="col-md-12">
         <div class="menu_header">
-          <h2 class="menu_header-title linear-after2">Un engagement formel&nbsp;</h2>
-          <h2 class="menu_header-title2 text-bg">&nbsp;&nbsp;envers l'excellence continue</h2>
+          <h2 class="menu_header-title linear-after6">Un engagement formel&nbsp;</h2>
+          <h2 class="menu_header-title2 text-bg pb-5">&nbsp;&nbsp;envers l'excellence continue<br></h2>
         </div>
         <div class="menu_content">
-          <div class="container">
+          <div class="container to-be-100">
             <p class="menu_content-p">
               Nous sommes fiers de notre engagement formel envers l’excellence continue. Chez DMB, chaque brique posée
               est imprégnée de notre engagement à offrir des résultats exceptionnels à nos clients, à respecter les
@@ -64,8 +64,8 @@ keywords:
     <div class="row">
       <div class="col-md-12">
         <div class="menu_header">
-          <h2 class="menu_header-title linear-after2">Nos réalisations&nbsp;</h2>
-          <h2 class="menu_header-title2 text-bg">&nbsp;&nbsp;Construction d’un entrepot</h2>
+          <h2 class="menu_header-title linear-after6">Nos réalisations&nbsp;</h2>
+          <h2 class="menu_header-title2 pb-5 text-bg">&nbsp;&nbsp;Construction d’un entrepot</h2>
         </div>
         <div class="p-releative">
           <div class="owl-carousel owl2 d-flex align-items-center">
@@ -115,8 +115,8 @@ keywords:
     <div class="row">
       <div class="col-md-12">
         <div class="menu_header">
-          <h2 class="menu_header-title linear-after2">Nos réalisations&nbsp;</h2>
-          <h2 class="menu_header-title2 text-bg">&nbsp;&nbsp;Extension et surélévation<br>
+          <h2 class="menu_header-title linear-after6">Nos réalisations&nbsp;</h2>
+          <h2 class="menu_header-title2 text-bg">&nbsp;Extension et surélévation<br>
             d’un Ephad</h2>
         </div>
         <div class="p-releative">
@@ -159,8 +159,8 @@ keywords:
     <div class="row">
       <div class="col-md-12">
         <div class="menu_header">
-          <h2 class="menu_header-title linear-after2">Nos réalisations&nbsp;</h2>
-          <h2 class="menu_header-title2 text-bg">&nbsp;&nbsp;Reprises en structure à<br>
+          <h2 class="menu_header-title linear-after6">Nos réalisations&nbsp;</h2>
+          <h2 class="menu_header-title2 text-bg">Reprises en structure à<br>
             la suite d’un incendie.</h2>
         </div>
         <div class="p-releative">
@@ -189,7 +189,7 @@ keywords:
     <div class="row">
       <div class="col-md-12">
         <div class="menu_header">
-          <h2 class="menu_header-title linear-after2">Nos réalisations&nbsp;</h2>
+          <h2 class="menu_header-title linear-after6">Nos réalisations&nbsp;</h2>
           <h2 class="menu_header-title2 text-bg">&nbsp;&nbsp;Extension de maison.</h2>
         </div>
         <div class="p-releative">
@@ -250,7 +250,7 @@ keywords:
     <div class="row">
       <div class="col-md-12">
         <div class="menu_header">
-          <h2 class="menu_header-title linear-after2">Nos réalisations&nbsp;</h2>
+          <h2 class="menu_header-title linear-after6">Nos réalisations&nbsp;</h2>
           <h2 class="menu_header-title2 text-bg">&nbsp;&nbsp;Construction d’un collectif</h2>
         </div>
         <div class="p-releative">
@@ -300,7 +300,7 @@ keywords:
     <div class="row">
       <div class="col-md-12">
         <div class="menu_header">
-          <h2 class="menu_header-title linear-after2">Nos réalisations&nbsp;</h2>
+          <h2 class="menu_header-title linear-after6">Nos réalisations&nbsp;</h2>
           <h2 class="menu_header-title2 text-bg">&nbsp;&nbsp;Construction d’une
             piscine municipale</h2>
         </div>
