--- a/src/renovation-d-appartement-a-paris.html
+++ b/src/renovation-d-appartement-a-paris.html
@@ -34,7 +34,7 @@ keywords:
     <div class="row">
       <div class="col-md-12">
         <div class="menu_header pb-2">
-          <h2 class="menu_header-title text-left my-2">Préparer son projet de rénovation</h2>
+          <h2 class="menu_header-title text-to-left my-2">Préparer son projet de rénovation</h2>
         </div>
         <div class="menu_content">
           <div class="container">
@@ -44,7 +44,7 @@ keywords:
               avez une idée claire, vous pouvez décider si vous avez besoin d'une <strong>rénovation totale</strong> ou
               seulement d'une <strong>rénovation partielle</strong>.</p>
 
-            <h3 class="menu_header-title2 text-left my-2">Étudier la faisabilité</h3>
+            <h3 class="menu_header-title2 text-to-left my-2">Étudier la faisabilité</h3>
 
              <p class="menu_content-p">Un autre aspect essentiel est la faisabilité du projet. À Paris, où les appartements sont souvent situés
               dans de vieilles bâtisses, il faut prendre en compte les règles de <strong>copropriété</strong> ainsi que
@@ -52,7 +52,7 @@ keywords:
               porteuses requiert souvent une autorisation spéciale. Il est donc judicieux de consulter le règlement de
               copropriété et de discuter avec le syndic pour anticiper les éventuelles contraintes.</p>
 
-            <h3 class="menu_header-title2 text-left my-2">Définir un budget réaliste</h3>
+            <h3 class="menu_header-title2 text-to-left my-2">Définir un budget réaliste</h3>
 
              <p class="menu_content-p">La clé d'une bonne préparation est aussi de définir un budget réaliste. Le <strong>prix au mètre
                 carré</strong> pour la <strong>rénovation</strong> à Paris peut varier considérablement en fonction de
@@ -72,16 +72,16 @@ keywords:
     <div class="row">
       <div class="col-md-12">
         <div class="menu_content">
-          <div class="container">
+          <div class="container to-be-100">
             <div class="menu_header justify-content-start py-3">
-              <h2 class="menu_header-title text-left my-2">Choisir la bonne entreprise de rénovation</h2>
+              <h2 class="menu_header-title text-to-left my-2">Choisir la bonne entreprise de rénovation</h2>
             </div>
              <p class="menu_content-p">Une fois que vous avez préparé votre projet, l'étape suivante est de choisir une bonne entreprise de
               rénovation. Avoir des professionnels compétents et expérimentés rendra le processus beaucoup plus fluide
               et moins stressant. Pour cela, il convient de comparer plusieurs prestataires, demander des devis
               détaillés et vérifier leurs précédentes réalisations.</p>
 
-            <h3 class="menu_header-title2 text-left my-2">Critères de sélection</h3>
+            <h3 class="menu_header-title2 text-to-left my-2">Critères de sélection</h3>
 
              <p class="menu_content-p">Lorsque vous choisissez une entreprise de rénovation, assurez-vous qu'elle dispose des certifications
               nécessaires. Les labels comme Qualibat peuvent être un bon indicateur de qualité. De plus, consultez les
@@ -95,7 +95,7 @@ keywords:
               <li class="menu_content-p">Assurez-vous de la compatibilité avec votre projet spécifique.</li>
             </ul>
 
-            <h3 class="menu_header-title2 text-left my-2">Exemples d'entreprises fiables</h3>
+            <h3 class="menu_header-title2 text-to-left my-2">Exemples d'entreprises fiables</h3>
 
              <p class="menu_content-p">À Paris, plusieurs entreprises se sont forgées une réputation solide dans le domaine de la
               <strong>rénovation</strong>. Entre autres, des entreprises comme <strong>Little Worker</strong>,
@@ -116,30 +116,30 @@ keywords:
     <div class="row">
       <div class="col-md-12">
         <div class="menu_content">
-          <div class="container">
+          <div class="container to-be-100">
             <div class="menu_header justify-content-start py-3">
 
 
-              <h2 class="menu_header-title text-left my-2">Les étapes clés de la rénovation</h2>
+              <h2 class="menu_header-title text-to-left my-2">Les étapes clés de la rénovation</h2>
             </div>
              <p class="menu_content-p">L'une des meilleures manières de garantir le succès de votre projet est de suivre les étapes clés de
               manière organisée. Voici quelques éléments incontournables du processus :</p>
 
-            <h3 class="menu_header-title2 text-left my-2">Établir un calendrier</h3>
+            <h3 class="menu_header-title2 text-to-left my-2">Établir un calendrier</h3>
 
              <p class="menu_content-p">Avant de commencer les travaux, établissez un calendrier précis. Définir des jalons clairs permet non
               seulement de suivre l'avancement mais aussi de gérer plus efficacement les éventuels retards. Discutez
               avec votre entreprise de rénovation pour intégrer des marges de manœuvre afin de pallier les imprévus sans
               compromettre l’ensemble du projet.</p>
 
-            <h3 class="menu_header-title2 text-left my-2">Suivi régulier des travaux</h3>
+            <h3 class="menu_header-title2 text-to-left my-2">Suivi régulier des travaux</h3>
 
              <p class="menu_content-p">Le suivi régulier est crucial pour s'assurer que les travaux respectent les plans initiaux et les délais.
               Visitez régulièrement le chantier et organisez des réunions de suivi avec votre entreprise de rénovation.
               Prenez des photos et notez les progrès pour avoir une trace écrite des différentes étapes. Si quelque
               chose ne va pas, mieux vaut le repérer tôt pour apporter les corrections nécessaires.</p>
 
-            <h3 class="menu_header-title2 text-left my-2">La finalisation et livraison</h3>
+            <h3 class="menu_header-title2 text-to-left my-2">La finalisation et livraison</h3>
 
              <p class="menu_content-p">Enfin, une fois tous les travaux terminés, inspectez attentivement chaque détail avant de signer la
               réception. Assurez-vous que tout est conforme aux spécifications initiales et que les finitions sont
@@ -157,26 +157,26 @@ keywords:
     <div class="row">
       <div class="col-md-12">
         <div class="menu_content">
-          <div class="container">
+          <div class="container to-be-100">
             <div class="menu_header justify-content-start py-3">
-              <h2 class="menu_header-title text-left my-2">Astuces pour une rénovation réussie</h2>
+              <h2 class="menu_header-title text-to-left my-2">Astuces pour une rénovation réussie</h2>
             </div>
              <p class="menu_content-p">Pour maximiser les chances de réussite de votre projet, voici quelques astuces supplémentaires :</p>
 
-            <h3 class="menu_header-title2 text-left my-2">Optimisation de l’espace</h3>
+            <h3 class="menu_header-title2 text-to-left my-2">Optimisation de l’espace</h3>
 
              <p class="menu_content-p">Paris est connu pour ses appartements souvent compacts. L'optimisation de l'espace doit donc être une
               priorité. Choisissez des meubles multifonctions, utilisez des couleurs claires pour agrandir visuellement
               l’espace et intégrez des rangements astucieux. Pensez aussi à exploiter toute la hauteur sous plafond
               disponible pour créer des rangements en hauteur.</p>
 
-            <h3 class="menu_header-title2 text-left my-2">Investir dans la qualité</h3>
+            <h3 class="menu_header-title2 text-to-left my-2">Investir dans la qualité</h3>
 
              <p class="menu_content-p">Même si votre budget est serré, n'économisez pas sur la qualité des matériaux et des finitions. Investir
               dans des produits durables peut sembler coûteux à court terme, mais c'est un choix judicieux qui évitera
               des réparations fréquentes à l'avenir et maintiendra la valeur de votre logement.</p>
 
-            <h3 class="menu_header-title2 text-left my-2">Personnaliser votre espace</h3>
+            <h3 class="menu_header-title2 text-to-left my-2">Personnaliser votre espace</h3>
 
              <p class="menu_content-p">Votre appartement est votre chez-vous ; faites-le refléter votre personnalité. Utilisez des décorations
               uniques, des tableaux et des couleurs que vous aimez. Votre projet de rénovation est l'occasion parfaite
