--- a/src/reprise-des-structures.html
+++ b/src/reprise-des-structures.html
@@ -33,11 +33,11 @@ keywords:
     <div class="row">
       <div class="col-md-12">
         <div class="menu_header pb-2">
-          <h2 class="menu_header-title text-left my-2">Pourquoi procéder à la reprise des structures ?</h2>
+          <h2 class="menu_header-title text-to-left my-2">Pourquoi procéder à la reprise des structures ?</h2>
         </div>
         <div class="menu_content">
           <div class="container">
-            <h3 class="menu_header-title2 text-left my-2">Les problématiques courantes</h3>
+            <h3 class="menu_header-title2 text-to-left my-2">Les problématiques courantes</h3>
             <p class="menu_content-p">Les structures des bâtiments peuvent rencontrer divers problèmes au fil du temps. Les fondations peuvent
               s'affaiblir, le bois peut se dégrader ou encore le béton présenter des fissures. Sans intervention, ces
               problèmes peuvent mener à des <strong>risques importants</strong>, aussi bien pour les occupants que pour
@@ -47,7 +47,7 @@ keywords:
               environnementaux comme les intempéries ou les séismes. Chacun de ces critères nécessite une approche
               particulière pour garantir une réhabilitation efficace.</p>
 
-            <h3 class="menu_header-title2 text-left my-2">Assurer la sécurité et la conformité</h3>
+            <h3 class="menu_header-title2 text-to-left my-2">Assurer la sécurité et la conformité</h3>
             <p class="menu_content-p">Outre la correction des défauts existants, la reprise des structures vise également à mettre le bâtiment
               en <strong>conformité avec les normes actuelles de sécurité et de construction</strong>. Parfois, cela
               implique non seulement des travaux de réparation mais aussi d'adaptation, surtout dans les vieux bâtiments
@@ -67,12 +67,12 @@ keywords:
     <div class="row">
       <div class="col-md-12">
         <div class="menu_content">
-          <div class="container">
+          <div class="container to-be-100">
             <div class="menu_header justify-content-start py-3">
 
-              <h2 class="menu_header-title text-left my-2">Techniques courantes de reprise des structures</h2>
+              <h2 class="menu_header-title text-to-left my-2">Techniques courantes de reprise des structures</h2>
             </div>
-            <h3 class="menu_header-title2 text-left my-2">Fondations et stabilisation</h3>
+            <h3 class="menu_header-title2 text-to-left my-2">Fondations et stabilisation</h3>
             <p class="menu_content-p">Les fondations sont la base même de toute construction. Lorsqu'elles montrent des signes de faiblesse,
               différentes techniques peuvent être employées pour leur stabilisation. Parmi celles-ci, on retrouve le
               <strong>micropieux</strong>, les pieux forés ou battus, ainsi que l'injection de résines dans les sols
@@ -80,7 +80,7 @@ keywords:
             <p class="menu_content-p">Cette étape est essentielle car elle conditionne la réussite de toutes les autres opérations de reprise
               structurale. Une mauvaise intervention à ce niveau peut compromettre l'ensemble de la réhabilitation.</p>
 
-            <h3 class="menu_header-title2 text-left my-2">Renforcement de structures existantes</h3>
+            <h3 class="menu_header-title2 text-to-left my-2">Renforcement de structures existantes</h3>
             <p class="menu_content-p">Le <strong>renforcement de structures</strong> est une méthode souvent utilisée lorsque le bâtiment doit
               supporter des charges plus importantes que celles prévues lors de sa conception initiale. Cela peut
               inclure l'ajout de matériaux comme le béton, le bois ou encore les structures métalliques.</p>
@@ -89,7 +89,7 @@ keywords:
               celle des passes alternées, permettant d'alterner les zones de renfort tout en maintenant l'opérationnelle
               intégrité du bâtiment.</p>
 
-            <h3 class="menu_header-title2 text-left my-2">Reprise en sous-œuvre</h3>
+            <h3 class="menu_header-title2 text-to-left my-2">Reprise en sous-œuvre</h3>
             <p class="menu_content-p">Lorsque les fondations sont trop endommagées ou absentes, il est parfois nécessaire de procéder à une
               <strong>reprise en sous-œuvre</strong>. Cette méthode complexe permet de créer ou de renforcer les
               fondations sans démolir la structure existante. Cela peut passer par des injections de coulis de ciment ou
@@ -112,11 +112,11 @@ keywords:
     <div class="row">
       <div class="col-md-12">
         <div class="menu_content">
-          <div class="container">
+          <div class="container to-be-100">
             <div class="menu_header justify-content-start py-3">
-              <h2 class="menu_header-title text-left my-2">Matériaux utilisés pour la reprise des structures</h2>
+              <h2 class="menu_header-title text-to-left my-2">Matériaux utilisés pour la reprise des structures</h2>
             </div>
-            <h3 class="menu_header-title2 text-left my-2">Structures métalliques</h3>
+            <h3 class="menu_header-title2 text-to-left my-2">Structures métalliques</h3>
             <p class="menu_content-p">Les <strong>structures métalliques</strong> offrent une résistance et une durabilité exceptionnelles.
               Leur utilisation est particulièrement recommandée pour renforcer les éléments porteurs exposés à de fortes
               contraintes. Le métal est flexible tout en étant robuste, ce qui le rend idéal pour des applications
@@ -124,7 +124,7 @@ keywords:
             <p class="menu_content-p">Bien sûr, cela demande une manutention spécifique et des compétences particulières afin de garantir des
               soudures parfaites et une protection contre la corrosion.</p>
 
-            <h3 class="menu_header-title2 text-left my-2">Béton et bois</h3>
+            <h3 class="menu_header-title2 text-to-left my-2">Béton et bois</h3>
             <p class="menu_content-p">Le <strong>béton armé</strong> reste l'un des matériaux les plus répandus lorsqu'il s'agit de renforcer
               ou de réparer des structures. Sa grande résistance à la compression le rend incontournable dans de
               nombreux projets de renforcement de structures. Cependant, il est essentiel de bien maîtriser les dosages
@@ -144,11 +144,11 @@ keywords:
     <div class="row">
       <div class="col-md-12">
         <div class="menu_content">
-          <div class="container">
+          <div class="container to-be-100">
             <div class="menu_header justify-content-start py-3">
-              <h2 class="menu_header-title text-left my-2">Procédés innovants en reprise des structures</h2>
+              <h2 class="menu_header-title text-to-left my-2">Procédés innovants en reprise des structures</h2>
             </div>
-            <h3 class="menu_header-title2 text-left my-2">Techniques de renfort modernes</h3>
+            <h3 class="menu_header-title2 text-to-left my-2">Techniques de renfort modernes</h3>
             <p class="menu_content-p">Avec les avancées technologiques, de <strong>nouvelles techniques de renfort</strong> émergent
               régulièrement. L'utilisation de fibres de carbone pour renforcer les éléments critiques est de plus en
               plus répandue. Ces fibres, extrêmement résistantes, permettent de renforcer sans ajouter trop de poids ou
@@ -156,7 +156,7 @@ keywords:
             <p class="menu_content-p">D'autres innovations incluent les systèmes de surveillance intelligente des structures, permettant de
               détecter précocement les faiblesses et ainsi intervenir avant l'apparition de dommages significatifs.</p>
 
-            <h3 class="menu_header-title2 text-left my-2">Surcharge structurelle et adaptations</h3>
+            <h3 class="menu_header-title2 text-to-left my-2">Surcharge structurelle et adaptations</h3>
             <p class="menu_content-p">Dans certains cas, il peut être nécessaire d'adapter le bâtiment à des <strong>surcharges structurelles
                 imprévues</strong>. Cela peut concerner l'ajout d'étages supplémentaires, l'installation de nouveaux
               équipements lourds ou une redistribution des charges internes.</p>
@@ -173,13 +173,13 @@ keywords:
     <div class="row">
       <div class="col-md-12">
         <div class="menu_content">
-          <div class="container">
+          <div class="container to-be-100">
             <div class="menu_header justify-content-start py-3">
 
-              <h2 class="menu_header-title text-left my-2">Guide pratique pour vos projets de reprise des structures</h2>
+              <h2 class="menu_header-title text-to-left my-2">Guide pratique pour vos projets de reprise des structures</h2>
             </div>
 
-            <h3 class="menu_header-title2 text-left my-2">Évaluation initiale</h3>
+            <h3 class="menu_header-title2 text-to-left my-2">Évaluation initiale</h3>
             <p class="menu_content-p">Avant d'entreprendre quelconque action, il est primordial de réaliser une évaluation approfondie de
               l'état actuel du bâtiment. Cette phase d'inspection permet d'identifier les points faibles et de
               déterminer les meilleures options pour intervenir.</p>
@@ -189,7 +189,7 @@ keywords:
               <li class="menu_content-p">Tests de charge et simulations</li>
             </ul>
 
-            <h3 class="menu_header-title2 text-left my-2">Planification et mise en œuvre</h3>
+            <h3 class="menu_header-title2 text-to-left my-2">Planification et mise en œuvre</h3>
             <p class="menu_content-p">Une fois l'évaluation réalisée, il est temps de planifier les interventions. Cette étape implique la
               <strong>sélection des technologies appropriées</strong>, la coordination des équipes et la mise en place
               de mesures de sécurité strictes pour protéger les travailleurs et les occupants.</p>
@@ -210,12 +210,12 @@ keywords:
     <div class="row">
       <div class="col-md-12">
         <div class="menu_content">
-          <div class="container">
+          <div class="container to-be-100">
             <div class="menu_header justify-content-start py-3">
-              <h2 class="menu_header-title text-left my-2">Conseils supplémentaires</h2>
+              <h2 class="menu_header-title text-to-left my-2">Conseils supplémentaires</h2>
             </div>
 
-            <h3 class="menu_header-title2 text-left my-2">Travailler avec des experts</h3>
+            <h3 class="menu_header-title2 text-to-left my-2">Travailler avec des experts</h3>
             <p class="menu_content-p">Pour garantir la qualité et la durabilité des travaux, il est systématiquement recommandé de faire appel
               à des professionnels spécialisés dans la reprise en sous-œuvre et autres techniques de renforcement de
               structures. Cela permet de bénéficier d'un savoir-faire éprouvé et d'une expertise adaptée à chaque
@@ -223,7 +223,7 @@ keywords:
             <p class="menu_content-p">En faisant confiance à des équipes qualifiées, on augmente significativement les chances de réussite tout
               en minimisant les risques de complications futures.</p>
 
-            <h3 class="menu_header-title2 text-left my-2">S'assurer d'une documentation complète</h3>
+            <h3 class="menu_header-title2 text-to-left my-2">S'assurer d'une documentation complète</h3>
             <p class="menu_content-p">Enfin, garder une <strong>documentation exhaustive</strong> de toutes les interventions est crucial. Cela
               comprend les rapports d'inspection initiale, les plans d'action, les détails des matériaux utilisés et les
               tests effectués post-travaux.</p>
