--- a/src/404.html
+++ b/src/404.html
@@ -3,14 +3,14 @@ permalink: /404.html
 layout: default
 ---
 
-<section class="page404 py-0">
+<section class="page404 section-y my-5">
   <div class="row">
       <div class="col-md-12">
           <div class="container">
               <div class="page404_content">
                   <h1 class="page404_content-title">404</h1>
                   <p class="page404_content-p">Le serveur n'a pas trouvé le document souhaité.</p>
-                  <a href="{% link accueil.html %}" class="slider_content-button--c">Retour à la page d'accueil</a>
+                  <a href="{% link accueil.html %}" class="menu_content-link">Retour à la page d'accueil</a>
               </div>
           </div>
       </div>
