--- a/src/comment-realiser.html
+++ b/src/comment-realiser.html
@@ -36,7 +36,7 @@ keywords:
           <h2 class="menu_header-title text-center my-2">Pourquoi envisager l'ouverture d'un mur porteur ?</h2>
         </div>
         <div class="menu_content">
-          <div class="container">
+          <div class="container to-be-100">
             <p class="menu_content-p">
               Créer une ouverture dans un mur porteur permet de <strong>gagner espace et luminosité</strong>. Par
               exemple, vous rêvez peut-être d'une cuisine ouverte sur le salon ou de fusionner deux petites pièces pour
@@ -60,9 +60,9 @@ keywords:
     <div class="row">
       <div class="col-md-12">
         <div class="menu_content">
-          <div class="container">
+          <div class="container to-be-100">
             <div class="menu_header justify-content-start py-3">
-              <h2 class="menu_header-title text-left my-2">Les autorisations nécessaires</h2>
+              <h2 class="menu_header-title text-to-left my-2">Les autorisations nécessaires</h2>
             </div>
             <p class="menu_content-p">
               Avant de procéder à toute modification structurelle dans votre habitation, obtenir les
@@ -86,9 +86,9 @@ keywords:
     <div class="row">
       <div class="col-md-12">
         <div class="menu_content">
-          <div class="container">
+          <div class="container to-be-100">
             <div class="menu_header justify-content-start py-3">
-              <h3 class="menu_header-title2 text-left my-2">L'intervention d'un architecte et d'un BET</h3>
+              <h3 class="menu_header-title2 text-to-left my-2">L'intervention d'un architecte et d'un BET</h3>
             </div>
             <p class="menu_content-p">Pour garantir la faisabilité et la sécurité de votre projet, il est conseillé de réaliser une
               <strong>étude de faisabilité</strong> complète. Cette étude sera généralement menée par un
@@ -109,14 +109,14 @@ keywords:
     <div class="row">
       <div class="col-md-12">
         <div class="menu_content">
-          <div class="container">
+          <div class="container to-be-100">
             <div class="menu_header justify-content-start py-3">
-              <h2 class="menu_header-title text-left my-2">Étapes essentielles de la réalisation</h2>
+              <h2 class="menu_header-title text-to-left my-2">Étapes essentielles de la réalisation</h2>
             </div>
 
             <div class="row">
               <div class="col-md-6">
-                <h3 class="menu_header-title2 text-left my-2">Préparation et pose des étais</h3>
+                <h3 class="menu_header-title2 text-to-left my-2">Préparation et pose des étais</h3>
                 <p class="menu_content-p">La première étape concrète sur le chantier consiste en la <strong>pose des étais</strong>. Ces
                   supports provisoires sont essentiels pour renforcer la structure pendant les travaux. Ils maintiennent
                   le poids du bâtiment durant la démolition partielle du mur porteur.</p>
@@ -126,7 +126,7 @@ keywords:
               </div>
               <div class="col-md-6">
 
-                <h3 class="menu_header-title2 text-left my-2">Démolition contrôlée du mur</h3>
+                <h3 class="menu_header-title2 text-to-left my-2">Démolition contrôlée du mur</h3>
                 <p class="menu_content-p">Une fois les étais en place, on peut commencer la démolition de la partie concernée du mur. Il est
                   crucial de conserver des ouvertures soignées et sécurisées. Utilisez des outils adaptés, comme des
                   marteaux-piqueurs ou des scies spécialisées, pour éviter les fissures et minimiser les vibrations.</p>
@@ -136,7 +136,7 @@ keywords:
 
               </div>
               <div class="col-md-6">
-                <h3 class="menu_header-title2 text-left my-2">Installation du linteau IPN</h3>
+                <h3 class="menu_header-title2 text-to-left my-2">Installation du linteau IPN</h3>
                 <p class="menu_content-p">Après la démolition contrôlée, vient le moment crucial de l'installation du <strong>linteau
                     ipn</strong>. Ce type de profilé métallique est utilisé pour soutenir les charges au-dessus de
                   l'ouverture créée. Il faut s'assurer de choisir un linteau dont les caractéristiques correspondent aux
@@ -148,7 +148,7 @@ keywords:
 
 
               <div class="col-md-6">
-                <h3 class="menu_header-title2 text-left my-2">Finitions et consolidation</h3>
+                <h3 class="menu_header-title2 text-to-left my-2">Finitions et consolidation</h3>
                 <p class="menu_content-p">Avec le linteau en place, il est temps de finaliser et de consolider l'ouverture. Là encore, chaque
                   étape doit être réalisée avec soin. Remplissez tout espace entre le mur et le linteau pour éviter les
                   ponts thermiques et favoriser l'isolation acoustique.</p>
@@ -177,9 +177,9 @@ keywords:
     <div class="row">
       <div class="col-md-12">
         <div class="menu_content">
-          <div class="container">
+          <div class="container to-be-100">
             <div class="menu_header justify-content-start py-3">
-              <h2 class="menu_header-title text-left my-2">Coût ouverture mur porteur</h2>
+              <h2 class="menu_header-title text-to-left my-2">Coût ouverture mur porteur</h2>
             </div>
             <p class="menu_content-p">Réaliser une ouverture dans un mur porteur représente un investissement financier non négligeable. Le
               <strong>coût ouverture mur porteur</strong> varie selon plusieurs facteurs, notamment la dimension de
@@ -203,9 +203,9 @@ keywords:
     <div class="row">
       <div class="col-md-12">
         <div class="menu_content">
-          <div class="container">
+          <div class="container to-be-100">
             <div class="menu_header justify-content-start py-3">
-              <h3 class="menu_header-title2 text-left my-2">Facteurs influençant le coût</h3>
+              <h3 class="menu_header-title2 text-to-left my-2">Facteurs influençant le coût</h3>
             </div>
             <p class="menu_content-p">Plusieurs éléments influent directement sur le budget total de cette transformation. La localisation
               géographique joue un rôle majeur car les prix de la main-d'œuvre et des matériaux varient d’une région à
@@ -227,10 +227,10 @@ keywords:
     <div class="row">
       <div class="col-md-12">
         <div class="menu_content">
-          <div class="container">
+          <div class="container to-be-100">
             <div class="menu_header justify-content-start py-3">
 
-              <h2 class="menu_header-title text-left my-2">Exemple concret&nbsp;: délimitation emplacement ouverture
+              <h2 class="menu_header-title text-to-left my-2">Exemple concret&nbsp;: délimitation emplacement ouverture
               </h2>
             </div>
             <p class="menu_content-p">Prenons l'exemple précis où l'on souhaite ouvrir un mur pour agrandir une cuisine ouverte sur le salon.
@@ -252,9 +252,9 @@ keywords:
     <div class="row">
       <div class="col-md-12">
         <div class="menu_content">
-          <div class="container">
+          <div class="container to-be-100">
             <div class="menu_header justify-content-start py-3">
-              <h3 class="menu_header-title2 text-left my-3">Intégrer des éléments écologiques</h3>
+              <h3 class="menu_header-title2 text-to-left my-3">Intégrer des éléments écologiques</h3>
             </div>
             <p class="menu_content-p">
               L’ajout d’équipements écologiques est de plus en plus prisé lors de projets d’agrandissement. Panneaux
